--- a/app/src/main/res/layout/dialog_add_edit_comparison.xml
+++ b/app/src/main/res/layout/dialog_add_edit_comparison.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/appCompatTextView"
+        android:id="@+id/text_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
@@ -30,7 +30,7 @@
         app:layout_constraintBottom_toTopOf="@+id/button_cancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">
+        app:layout_constraintTop_toBottomOf="@+id/text_title">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/input_text_name"
