--- a/app/src/main/res/layout/fragment_comparison_result.xml
+++ b/app/src/main/res/layout/fragment_comparison_result.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="gone" />
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/text_empty_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/text_empty_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
