--- a/app/src/main/res/layout/fragment_comparisons.xml
+++ b/app/src/main/res/layout/fragment_comparisons.xml
@@ -2,7 +2,6 @@
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -28,7 +27,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/text_empty_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -46,7 +45,7 @@
         app:layout_constraintVertical_chainStyle="packed"
         android:text="@string/title_no_comparisons" />
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/text_empty_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
