--- a/app/src/main/res/layout/fragment_option_comparisons.xml
+++ b/app/src/main/res/layout/fragment_option_comparisons.xml
@@ -28,7 +28,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/text_empty_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -46,7 +46,7 @@
         app:layout_constraintVertical_chainStyle="packed"
         android:text="@string/title_no_option_comparisons" />
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/text_empty_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
