--- a/app/src/main/res/layout/fragment_comparison_result.xml
+++ b/app/src/main/res/layout/fragment_comparison_result.xml
@@ -12,10 +12,19 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view_divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="4dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_chart_types" />
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/chart_pie_results"
@@ -23,11 +32,11 @@
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_chart_types" />
+        app:layout_constraintTop_toBottomOf="@+id/view_divider" />
 
     <com.github.mikephil.charting.charts.HorizontalBarChart
         android:id="@+id/chart_bar_results"
@@ -35,11 +44,11 @@
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_chart_types" />
+        app:layout_constraintTop_toBottomOf="@+id/view_divider" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_comparison_results"
@@ -48,11 +57,11 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_chart_types" />
+        app:layout_constraintTop_toBottomOf="@+id/view_divider" />
 
     <ProgressBar
         android:id="@+id/progress_loading"
