--- a/app/src/main/res/layout/fragment_comparison_result.xml
+++ b/app/src/main/res/layout/fragment_comparison_result.xml
@@ -74,7 +74,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="gone" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
         android:id="@+id/text_empty_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -92,7 +92,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
         android:id="@+id/text_empty_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
