--- a/app/src/main/res/layout/fragment_comparisons.xml
+++ b/app/src/main/res/layout/fragment_comparisons.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
         android:id="@+id/text_empty_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
         app:layout_constraintVertical_chainStyle="packed"
         android:text="@string/title_no_comparisons" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
         android:id="@+id/text_empty_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
