--- a/app/src/main/res/layout/fragment_option_comparisons.xml
+++ b/app/src/main/res/layout/fragment_option_comparisons.xml
@@ -51,7 +51,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_divider" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
         android:id="@+id/text_empty_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
         android:id="@+id/text_empty_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
