--- a/app/src/main/res/layout/item_filter_type.xml
+++ b/app/src/main/res/layout/item_filter_type.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v7.widget.AppCompatTextView
-        android:padding="8dp"
+
+    <TextView
         android:id="@+id/text_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:textColor="@android:color/black"/>
+        android:padding="8dp"
+        android:textColor="@android:color/black"
+        android:textSize="14sp" />
 </FrameLayout>
