--- a/app/src/main/res/layout/item_option.xml
+++ b/app/src/main/res/layout/item_option.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
         android:id="@+id/text_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="test" />
 
-    <android.support.v7.widget.AppCompatImageView
+    <ImageView
         android:id="@+id/image_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,6 +35,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
 </android.support.constraint.ConstraintLayout>
