--- a/app/src/main/res/layout/activity_comparison.xml
+++ b/app/src/main/res/layout/activity_comparison.xml
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_compare"
-            app:fab_label="Compare options"
+            app:fab_label="@string/menu_recompare_options"
             app:fab_size="normal"
             app:fab_colorNormal="@color/colorAccent"
             app:fab_colorPressed="@color/colorAccent" />
@@ -66,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_insert"
-            app:fab_label="Add options from clipboard"
+            app:fab_label="@string/menu_add_from_clipboard"
             app:fab_size="normal"
             app:fab_colorNormal="@color/colorAccent"
             app:fab_colorPressed="@color/colorAccent" />
