--- a/app/src/main/res/layout/fragment_recompare.xml
+++ b/app/src/main/res/layout/fragment_recompare.xml
@@ -7,15 +7,16 @@
 
     <TextView
         android:id="@+id/text_prompt"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:text="@string/title_prompt"
+        android:text="@string/title_prompt_default"
         android:textColor="@android:color/black"
-        android:textSize="16sp"
+        android:textSize="20sp"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/view_option_comparison"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
