--- a/app/src/main/res/layout/item_pasted_option.xml
+++ b/app/src/main/res/layout/item_pasted_option.xml
@@ -13,6 +13,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:imeOptions="actionNext"
+        android:inputType="textNoSuggestions"
         android:maxLines="1"
         android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="parent"
