--- a/app/src/main/res/layout/activity_comparison.xml
+++ b/app/src/main/res/layout/activity_comparison.xml
@@ -56,20 +56,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_compare"
-            app:fab_label="@string/menu_recompare_options"
-            app:fab_size="normal"
             app:fab_colorNormal="@color/colorAccent"
-            app:fab_colorPressed="@color/colorAccent" />
+            app:fab_colorPressed="@color/colorAccent"
+            app:fab_label="@string/menu_recompare_options"
+            app:fab_size="normal" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab_add_options"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_insert"
-            app:fab_label="@string/menu_add_from_clipboard"
-            app:fab_size="normal"
             app:fab_colorNormal="@color/colorAccent"
-            app:fab_colorPressed="@color/colorAccent" />
+            app:fab_colorPressed="@color/colorAccent"
+            app:fab_label="@string/menu_add_from_clipboard"
+            app:fab_size="normal" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_clear_option_comparisons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_clear"
+            app:fab_colorNormal="@color/colorAccent"
+            app:fab_colorPressed="@color/colorAccent"
+            app:fab_label="@string/menu_clear_option_comparisons"
+            app:fab_size="normal" />
 
     </com.github.clans.fab.FloatingActionMenu>
 
